# LunaPnR

./: .gitignore  .gitmodules  .travis.yml  AppImageBuilder.yml  CMakeLists.txt  README.md  appveyor.yml  bootstrap.sh  bootstrap_release.bat  bootstrap_release.sh  build_srcdoc.sh  generate_deb.sh  mkappimage.sh  sourcedocumentation.html
contrib/: CMakeLists.txt
contrib/cxxopts/: CMakeLists.txt  url.txt
contrib/lua-5.4.3/: CMakeLists.txt
contrib/replace/: replace.hpp
contrib/strutils/: CMakeLists.txt
contrib/tomlplusplus/: CMakeLists.txt  url.txt
core/: CMakeLists.txt  dummy.cpp  lunapnr_version.h  main.cpp
core/algebra/: algebra.hpp  cgsolver.hpp  matrix.hpp  sdsolver.hpp  solver.hpp  sparsematrix.hpp  vector.hpp
core/celllib/: cell.cpp  cell.h  celllib.cpp  celllib.h  module.cpp  module.h  pin.cpp  pin.h
core/cellplacer/: cellplacer.cpp  cellplacer.h  densitybitmap.cpp  densitybitmap.h  netlistsplitter.cpp  netlistsplitter.h  qlaplacer.cpp  qlaplacer.h  qlaplacer_private.cpp  qplacer.cpp  qplacer.h  qplacertypes.cpp  qplacertypes.h  rowlegalizer.cpp  rowlegalizer.h
core/cellplacer2/: cellplacer2.cpp  cellplacer2.h  fillerhandler.cpp  fillerhandler.h  matrix.h
core/clangtidy/: clangtidy.yaml
core/common/: .gitignore  common.h  dbtypes.cpp  dbtypes.h  enums.toml  fileutils.cpp  fileutils.h  gds2defs.cpp  gds2defs.hpp  geometry.cpp  geometry.h  id.hpp  idiagnostics.cpp  idiagnostics.hpp  keyvector.hpp  lockable.hpp  logging.cpp  logging.h  matrix.cpp  matrix.h  mtqueue.hpp  namedstorage.h  numerical.hpp  objectptr.hpp  observer.h  strutils.hpp  subprocess.h  subprocess_unix.cpp  subprocess_win.cpp  tomlhelpers.h  visitor.h
core/cts/: cts.cpp  cts.h  cts_private.h
core/database/: cell.cpp  cell.h  celllib.cpp  celllib.h  database.h  dbtypes.cpp  dbtypes.h  design.cpp  design.h  enums.h  floorplan.cpp  floorplan.h  geometry.h  instance.cpp  instance.h  module.cpp  module.h  namedstorage.h  net.cpp  net.h  netlist.cpp  netlist.h  netlisttools.cpp  netlisttools.h  observer.cpp  pin.cpp  pin.h  properties.hpp  region.cpp  region.h  row.cpp  row.h  table.hpp  techlib.cpp  techlib.h  visitor.h
core/design/: design.cpp  design.h
core/export/: export.h
core/floorplan/: floorplan.cpp  floorplan.h  region.cpp  region.h  row.cpp  row.h
core/globalroute/: datatypes.h  globalrouter.cpp  globalrouter.h  grid.cpp  grid.h  lshape.h  prim.cpp  prim.h  prim_private.cpp  prim_private.h  wavefront.cpp  wavefront.h
core/import/: import.h
core/include/: lunacore.h
core/netlist/: design.cpp  design.h  instance.cpp  instance.h  net.cpp  net.h  netlist.cpp  netlist.h  netlisttools.cpp  netlisttools.h
core/padring/: configreader.cpp  configreader.hpp  padring.cpp  padring.hpp  padringplacer.cpp  padringplacer.hpp
core/partitioner/: fmpart.cpp  fmpart.h  fmtypes.h
core/passes/: checkpass.hpp  clearpass.hpp  ctspass.hpp  filesystempass.hpp  flattenpass.hpp  floorplanpass.hpp  gdsmerge.cpp  gdsmerge.hpp  infopass.hpp  padringpass.hpp  pass.cpp  pass.hpp  passes.cpp  passes.hpp  placepass.hpp  readpass.hpp  scriptpass.hpp  setpass.hpp  writepass.hpp
core/python/: consoleredirect.cpp  consoleredirect.h  converters.cpp  converters.h  pylunapnr.cpp  pylunapnr.h
core/quickplace/: diffusion.cpp  diffusion.hpp  quickplace.cpp  quickplace.hpp  quickplace_impl.cpp  quickplace_impl.hpp
core/techlib/: techlib.cpp  techlib.h
core/utilities/: CMakeLists.txt  README.md  netlistgen.cpp
gui/: CMakeLists.txt
gui/aboutdialog/: aboutdialog.cpp  aboutdialog.h
gui/cellbrowser/: cellbrowser.cpp  cellbrowser.h  celllayoutview.cpp  celllayoutview.h
gui/common/: customevents.h  database.cpp  database.h  guihelpers.cpp  guihelpers.h  hatchlibrary.cpp  hatchlibrary.h  imagemanip.cpp  imagemanip.h  layerrenderinfo.cpp  layerrenderinfo.h  msvcfix.h  pdkinfo.cpp  pdkinfo.h  projectsetup.cpp  projectsetup.h  svgicon.cpp  svgicon.hpp  tasklist.cpp  tasklist.h
gui/console/: .gitignore  cmdcompleter.cpp  cmdcompleter.hpp  mmconsole.cpp  mmconsole.h  mtstringbuffer.cpp  mtstringbuffer.h  repl.hpp  replwidget.cpp  replwidget.hpp  singlelineedit.cpp  singlelineedit.h
gui/ctsdialog/: ctsdialog.cpp  ctsdialog.h
gui/designbrowser/: designbrowser.cpp  designbrowser.h
gui/floorplandialog/: floorplandialog.cpp  floorplandialog.h
gui/floorplanview/: floorplanview.cpp  floorplanview.h
gui/luafuncs/: luafuncs.cpp  luafuncs.h
gui/models/: cellinfomodel.cpp  cellinfomodel.h  celllibmodel.cpp  celllibmodel.h  cellpinmodel.cpp  cellpinmodel.h  filesetupmodel.cpp  filesetupmodel.h  layerappearancetablemodel.cpp  layerappearancetablemodel.h  layermodel.cpp  layermodel.h  modelnodebase.cpp  modelnodebase.h  moduleinfomodel.cpp  moduleinfomodel.h  modulemodel.cpp  modulemodel.h  techlibinfomodel.cpp  techlibinfomodel.h  techlibsitemodel.cpp  techlibsitemodel.h
gui/opensta/: openstaparser.cpp  openstaparser.h
gui/pdkdialog/: pdkdialog.cpp  pdkdialog.h  pdktile.cpp  pdktile.h
gui/pdkinstaller/: downloader.cpp  downloader.h  pdkinstaller.cpp  pdkinstaller.h
gui/projectmanager/: filesetupmanager.cpp  filesetupmanager.h  projectmanager.cpp  projectmanager.h
gui/propertyview/: propertyview.cpp  propertyview.h
gui/python/: pyluna_extra.cpp  pyluna_extra.h
gui/resources/: resources.qrc
gui/src/: configurationdialog.cpp  configurationdialog.h  luawrapper.cpp  luawrapper.h  main.cpp  mainwindow.cpp  mainwindow.h
gui/tasks/: checktiming.cpp  checktiming.h  createfloorplan.cpp  createfloorplan.h  ctstask.cpp  ctstask.h  globalroute.cpp  globalroute.h  place.cpp  place.h  preflightchecks.cpp  preflightchecks.h  readallfiles.cpp  readallfiles.h  tasks.cpp  tasks.h
gui/techbrowser/: techbrowser.cpp  techbrowser.h
gui/translations/: lunapnr.en_US.ts  lunapnr.nl_NL.ts
gui/widgets/: blockcontainer.cpp  blockcontainer.h  blockframe.cpp  blockframe.h  clickablelabel.cpp  clickablelabel.h  colorbutton.cpp  colorbutton.h  flatactiontile.cpp  flatactiontile.h  flatimage.cpp  flatimage.h  (+18 more)
test/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt  doctool.cpp  enumgen.cpp  fixme.cpp  spdx.cpp
(+224 files in other folders)
